Update API doc
