# docs/swagger.json
@@ -234,6 +234,54 @@
                     }
                 }
             }
+        },
+        "/user/update_email": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Change current user's email only if the email is not verified.\nThe new email can not be the same as other users'.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update current user's email if not verified.",
+                "parameters": [
+                    {
+                        "description": "New email",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateEmailRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.UpdateEmailResponse"
+                        }
+                    },
+                    "406": {
+                        "description": "Email verified, with message `EMAIL_VERIFIED`",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "409": {
+                        "description": "New email confilct, with message `CONFLICT_EMAIL`",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -292,6 +340,19 @@
                 "username": {
                     "type": "string",
                     "maxLength": 30,
+                    "minLength": 5
+                }
+            }
+        },
+        "request.UpdateEmailRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 320,
                     "minLength": 5
                 }
             }
@@ -440,6 +501,43 @@
             "type": "object",
             "properties": {
                 "data": {},
+                "error": {},
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.UpdateEmailResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "properties": {
+                        "email": {
+                            "description": "Email is the user's email.",
+                            "type": "string"
+                        },
+                        "id": {
+                            "description": "ID is the user's id.",
+                            "type": "integer"
+                        },
+                        "nickname": {
+                            "description": "Nickname is the user's nickname, usually the student name if used in schools.",
+                            "type": "string"
+                        },
+                        "roles": {
+                            "description": "Role is the user's role, and is used to obtain the permissions of a user.",
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/resource.Role"
+                            }
+                        },
+                        "username": {
+                            "description": "Username is the user's username, usually the student ID if used in schools.",
+                            "type": "string"
+                        }
+                    }
+                },
                 "error": {},
                 "message": {
                     "type": "string"
